Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="mn">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="google-site-verification" content="Rb8RN3JPC3HYZeGZ6IoEIpLjEhH8I_bv1jtUd4OoXUs" />
 <title>BAT IREEDUI KHUC | Лифтний компани</title>
 
 <style>
@@ -316,3 +316,4 @@ function closeMenu(){
 
 </body>
 </html>
+
