--- a/holboo.html
+++ b/holboo.html
@@ -289,7 +289,7 @@ footer{
     <div class="card info">
       <h2>Манай мэдээлэл</h2>
       <p>Хаяг: Монгол улс, Улаанбаатар хот, Баянгол дүүрэг, 11-р хороо, МҮИС-ын Инновац Технологийн төвийн 10 давхарт 1006 тоот</p>
-      <p>И-мэйл: Batireeduihkuch@gmail.com</p>
+      <p>И-мэйл: Batireeduikhuch.elevator@gmail.com</p>
       <p>Утас: +976 95115805, +976 94253933, +976 90112112</p>
       <p>WhatsApp: +976 95115805, +976 99338763</p>
       <p>Viber: +976 88306651, +976 95115805</p>
@@ -375,3 +375,4 @@ document.getElementById('contactForm').addEventListener('submit', function(e){
 
 </body>
 </html>
+
